# aipat

./: CONTRIBUTING.md  LICENSE  README.md  config.py  main.py  memory.db  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report---.md  feature-request---.md
.github/workflows/: publish-aipat-python-package.yml  publish-aipatt-python-package.yml
aipatt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/ai/: agent.py  llm.py  tools.py
src/aipatt/: config.py  main.py
src/aipatt/ai/: agent.py  llm.py  tools.py
src/aipatt/utils/: email.py  executor.py  get_info.py  google_search.py  weather.py  youtube.py
src/utils/: email.py  executor.py  formatter.py  google_search.py  weather.py
