[build-system]
requires = ["setuptools >= 75.6.0", "setuptools_scm>=8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aipatt"
dynamic = ["version"]
description = "AIPATT: AI Powered Assistant Tool for Terminals"
authors = [{name = "Somesh Sharma", email = "someshs.ce@gmail.com"}]
maintainers = [
    {name = "Somesh Sharma", email = "someshs.ce@gmail.com"}
]
requires-python = ">= 3.10"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "rich",
    "click",
    "psutil",
    "langchain",
    "langgraph",
    "python-dotenv",
    "beautifulsoup4",
    "langchain-core",
    "langchain-ollama",
    "langchain-community",
    'pydantic[email,timezone]',
    "langchain_google_community",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
keywords = ["AI", "Terminal", "CMD", "command", "LLM", "Powershell", "Assistant", "Tool"]

[tool.setuptools_scm]
version_scheme = "only-version"
local_scheme = "no-local-version"

[tool.setuptools]
packages = { find = { where = ["src"], include = ["aipatt"] } }
package-dir = { "" = "src" }

[project.scripts]
aipatt = "aipatt.main:cli"

[project.urls]
Homepage = "http://pypi.org/project/aipatt/"
Repository = "https://github.com/someshsce/aipatt.git"
Issues = "https://github.com/someshsce/aipatt/issues"
